--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT"
   },
