--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "axios": "^0.24.0",
     "fs": "^0.0.1-security",
     "net": "^1.0.2",
-    "next": "latest",
+    "next": "^9.4.0",
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
