Add postinstall: ng build to package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "postinstall": "ng build"
   },
   "dependencies": {
     "axios": "^0.24.0",
