--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT",
     "postinstall": "npm run build"
@@ -11,6 +11,7 @@
     "net": "^1.0.2",
     "next": "^12.0.7",
     "next-images": "^1.8.4",
+    "node": "16.x",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
