--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "fs": "^0.0.1-security",
     "net": "^1.0.2",
     "next": "^12.0.7",
-    "next-images": "^1.8.4",
     "node": "16.x",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "request": "^2.88.2",
+    "sharp": "^0.29.3",
     "styled-components": "^5.3.3",
     "tls": "^0.0.1"
   }
